fix styling issues on mobile

--- a/www/guess.css
+++ b/www/guess.css
@@ -11,21 +11,31 @@ body>div {
   margin-top: 1em;
 }
 
+label>img {
+  width: 4em;
+  height: 4em;
+  object-fit: contain;
+}
+
+table tr td {
+  font-size: large;
+}
+
 /* HIDE RADIO */
-[type=radio] { 
+[type=radio] {
   position: absolute;
   opacity: 0;
   width: 0;
   height: 0;
 }
-  
+
 /* IMAGE STYLES */
-[type=radio] + img {
+[type=radio]+img {
   cursor: pointer;
 }
-  
+
 /* CHECKED STYLES */
-[type=radio]:checked + img {
+[type=radio]:checked+img {
   outline: 2px solid #f00;
 }
 
